dbt lowercase in tutorial

--- a/tutorial/Tutorial.ipynb
+++ b/tutorial/Tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Enable DBT-iPy\n",
+    "# Enable dbt-iPy\n",
     "\n",
     "The first step is to load this extension into Jupyter"
    ]
@@ -22,12 +22,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Connecting to DBT RPC\n",
+    "# Connecting to dbt RPC\n",
     "\n",
     "The two most important parameters would be:\n",
     "\n",
-    "- ``--port [port_number]`` Passing this parameter will run the DBT RPC on that port. Default is 8580\n",
-    "- ``--existing`` This will skip creating a new DBT RPC and instead it will connect to an existing one on the specified port\n",
+    "- ``--port [port_number]`` Passing this parameter will run the dbt RPC on that port. Default is 8580\n",
+    "- ``--existing`` This will skip creating a new dbt RPC and instead it will connect to an existing one on the specified port\n",
     "\n",
     "For example:\n",
     "\n",
@@ -62,7 +62,7 @@
    "source": [
     "# Querying the RPC\n",
     "\n",
-    "Now that we are connected we can compile and run SQL queries with DBT"
+    "Now that we are connected we can compile and run SQL queries with dbt"
    ]
   },
   {
